# ZK

./: Cargo.toml
fiat-shamir-transcript/: Cargo.toml
fiat-shamir-transcript/src/: main.rs  transcription.rs
gkr/: Cargo.toml
gkr/src/: circuit.rs  datastructure.rs  interfaces.rs  lib.rs  main.rs  protocol.rs  utils.rs  wire.rs
polynomial/: Cargo.toml
polynomial/src/: interface.rs  lib.rs  main.rs  util.rs
polynomial/src/composed/: interface.rs  mod.rs  multilinear.rs
polynomial/src/multilinear/: coefficient_form.rs  evaluation_form.rs  interface.rs  mod.rs  utils.rs
polynomial/src/univariate_polynomial/: interface.rs  mod.rs  univariant_coefficient.rs  univariate.rs
shamir-secret/: Cargo.toml
shamir-secret/src/: main.rs
src/: main.rs
sum-check/: Cargo.toml
sum-check/src/: composed.rs  composed_sumcheck.rs  composedsumcheck.rs  interface.rs  lib.rs  multi_composed_sumcheck.rs  multi_composedsumcheck.rs  prover.rs  sumcheck.rs  util.rs
transcript/: Cargo.toml
transcript/src/: lib.rs  transcription.rs
