[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
polynomial = {path = "../polynomial"}
transcript = {path = "../transcript"}
sum-check =   {path = "../sum-check"}